[package]
name = "tm"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
axum = { version = "0.7.9" }
chrono = { version = "0.4.39", features = ["serde"] }
minijinja = "2.5.0"
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "signal"] }
validator = { version = "0.19.0", features = ["derive"] }

[dev-dependencies]
reqwest = "0.12.9"
serde_json = "1.0.134"
